getting ready for eb deploy

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 cred.go
 trivtracker
 creds.json
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
